# root-clustering-focalh

./: .gitignore  CMakeLists.txt  README.md  line_count_cmd
data/focalsim/pi_plus_deg0_VETO/: README.txt
data/focalsim/pi_plus_deg1point5_VETO/: README.txt
data/focalsim/proton_deg0_VETO/: README.txt
data/focalsim/proton_deg1point5_VETO/: README.txt
include/: cell.h  cellular_automata.h  cluster_analysis.h  cluster_events.h  cluster_reader.h  cluster_writer.h  clustering.h  definitions.h  ext_libraries.h  focal_coordinates.h  focalh.h  gaussian_analysis.h  geometry.h  grid.h  histogram_analysis.h  modified_aggregation.h  null_clustering.h  plot_gaussian.h  plot_histogram.h
scripts/: cell_main.cxx  cluster_file.cxx  extract_digits.cxx  hist.cxx  null_cluster_file.cxx  testbeam_reconstruct.cxx
src/: cell.cxx  cellular_automata.cxx  cluster_analysis.cxx  cluster_events.cxx  cluster_reader.cxx  cluster_writer.cxx  clustering.cxx  focal_coordinates.cxx  focalh.cxx  gaussian_analysis.cxx  geometry.cxx  grid.cxx  histogram_analysis.cxx  modified_aggregation.cxx  null_clustering.cxx  plot_histogram.cxx
